Use virtual threads.